--- a/TankstellenProjekt_M226/TankstellenProjekt_M226/TankstellenProjekt_M226.csproj
+++ b/TankstellenProjekt_M226/TankstellenProjekt_M226/TankstellenProjekt_M226.csproj
@@ -63,7 +63,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="class\Pagecontroller.cs" />
+    <Compile Include="Controllers\Pagecontroller.cs" />
     <Compile Include="view\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
