--- a/TankstellenProjekt_M226/TankstellenProjekt_M226/TankstellenProjekt_M226.csproj
+++ b/TankstellenProjekt_M226/TankstellenProjekt_M226/TankstellenProjekt_M226.csproj
@@ -55,6 +55,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="view\Säulen.xaml.cs">
+      <DependentUpon>Säulen.xaml</DependentUpon>
+    </Compile>
     <Page Include="view\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -68,6 +71,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="view\Säulen.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
